<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".LoginActivity"
    android:id="@+id/loginScreen"
    >


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="-150dp"
        android:src="@drawable/c1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="-150dp"
        android:layout_marginBottom="-140dp"
        android:src="@drawable/c2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView"
                style="@style/textBold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="73dp"
                android:text="@string/sign_in"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/circular_login"
                app:layout_constraintBottom_toBottomOf="@+id/textView"
                app:layout_constraintEnd_toEndOf="@+id/textView"
                app:layout_constraintStart_toStartOf="@+id/textView"
                app:layout_constraintTop_toTopOf="@+id/textView" />


            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="37dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView">

                <TextView
                    style="@style/textMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/welcome"
                    android:textSize="24sp" />

                <TextView
                    style="@style/textRegular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="19dp"
                    android:text="@string/if_you_don_t_have_account_credentials_you_can_take_it_nin_near_hospital_in_your_city_after_vaccination"
                    android:textAlignment="center"
                    android:textSize="13sp" />

                <TextView
                    style="@style/textMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    android:text="@string/your_login" />

                <EditText
                    android:id="@+id/edtEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:background="@drawable/round"
                    android:textColor="@color/light_dark_blue_200"
                    style="@style/textMedium"
                    android:textSize="16sp"
                    android:paddingHorizontal="10dp"
                    android:paddingVertical="16dp" />

                <TextView
                    style="@style/textMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="70dp"
                    android:text="@string/your_password" />

                <EditText
                    android:id="@+id/edtPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:background="@drawable/round"
                    android:textColor="@color/light_dark_blue_200"
                    style="@style/textMedium"
                    android:textSize="16sp"
                    android:paddingHorizontal="10dp"
                    android:paddingVertical="16dp" />
            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSignIn"
                style="@style/textMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="60dp"
                android:drawableEnd="@mipmap/right"
                android:paddingVertical="12dp"
                android:text="@string/sign_in"
                android:textAllCaps="false"
                android:textColor="@color/light_dark_blue_200"
                android:textSize="18sp"
                app:backgroundTint="@color/white"
                app:cornerRadius="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

            <ProgressBar
                android:id="@+id/progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="60dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

            <LinearLayout
                android:id="@+id/llAlert"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="60dp"
                android:alpha="0"
                android:background="@drawable/round"
                android:backgroundTint="@color/dark_blue"
                android:elevation="10dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingVertical="16dp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/linearLayout"
                app:layout_constraintStart_toStartOf="@+id/linearLayout"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout">

                <TextView
                    android:id="@+id/txtAlert"
                    style="@style/textMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="We can’t find account with this credentials" />

                <ImageView
                    android:layout_width="26dp"
                    android:layout_height="26dp"
                    android:layout_marginStart="8dp"
                    android:src="@drawable/info" />


            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>